# component-generative-ai

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md
scripts/: build_n_test.sh
src/: component.py  configuration.py
src/client/: AIClient.py  Factory.py  anthropic_client.py  base.py  googleai_client.py  huggingface_client.py  openai_client.py
src/templates/: prompts.json
